--- a/Proyecto_Seb_Vettel.html
+++ b/Proyecto_Seb_Vettel.html
@@ -18,8 +18,11 @@
     <!-- Navigation Bar -->
     <header>
         <div class="menu_bar">
-        <a href="#Enlaces" class="bt-menu"><span class="icon-list2"></span>MENU</a>
-        </div>
+        <a href="Abstract.html" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+	<a href="About.html" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+	<a href="AMartin.html" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+	<a href="Contacto.html" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+	</div>
     
         <nav>
         <ul>
