--- a/Proyecto_Seb_Vettel.html
+++ b/Proyecto_Seb_Vettel.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="Home.css">
     <link rel="icon" href="Logo Seb.ico">
-    <!-- <script src="http://code.jquery.com/jquery-latest.js"></script> -->
-	<script src="NavBar.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="NavBar.js"></script>
 </head>
 
 <body>
