--- a/Proyecto_Seb_Vettel.html
+++ b/Proyecto_Seb_Vettel.html
@@ -19,6 +19,9 @@
     <header>
         <div class="menu_bar">
         <a href="#Enlaces" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+		<span></span>
+		<span></span>
+		<span></span>
 	</div>
     
         <nav>
