--- a/Proyecto_Seb_Vettel.html
+++ b/Proyecto_Seb_Vettel.html
@@ -18,10 +18,8 @@
     <!-- Navigation Bar -->
     <header>
         <div class="menu_bar">
-        <a href="#Enlaces" class="bt-menu"><span class="icon-list2"></span>MENU</a>
-		<span></span>
-		<span></span>
-		<span></span>
+        <a href="About.html" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+		
 	</div>
     
         <nav>
