--- a/Proyecto_Seb_Vettel.html
+++ b/Proyecto_Seb_Vettel.html
@@ -18,7 +18,7 @@
     <!-- Navigation Bar -->
     <header>
         <div class="menu_bar">
-        <a href="About.html" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+        <a href="#Enlaces" class="bt-menu"><span class="icon-list2"></span>MENU</a>
 		
 	</div>
     
