--- a/Proyecto_Seb_Vettel.html
+++ b/Proyecto_Seb_Vettel.html
@@ -19,10 +19,10 @@
 
     <!-- Navigation Bar -->
     <header>
-         <!--<div class="menu_bar">
-        <a href="#Enlaces" class="bt-menu"><span class="icon-list2"></span>MENU</a>
+         <div class="menu_bar">
+        <!--<a href="#Enlaces" class="bt-menu"><span class="icon-list2"></span>MENU</a>-->
 		
-	</div>-->
+	</div>
     
         <nav>
         <ul>
