--- a/AMR21.html
+++ b/AMR21.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="Logo Seb.ico">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
 	<script src="NavBar.js"></script>
     <title>AMR 21</title>
 </head>
