--- a/Estadísticas.html
+++ b/Estadísticas.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="Estadísticas.css">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
 	  <script src="NavBar.js"></script>
     <link rel="icon" href="Logo Seb.ico">
     <link rel="canonical" href="https://getbootstrap.com/">
