--- a/SlidersAMR21.html
+++ b/SlidersAMR21.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="SlidersAMR21.css">
     <link rel="icon" href="5Seb.ico">
-    <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous">
     </script>
     
