--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="Home.css">
-    <link rel="icon" href="Logo Seb.ico">
+    <link rel="icon" href="img/Logo Seb.ico">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="NavBar.js"></script>
 </head>
@@ -84,11 +84,11 @@
     <div class="social">
         <ul>
             <ul>
-                <li><a href="http://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
-                <li><a href="http://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
-                <li><a href="http://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
-                <li><a href="http://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
-                <li><a href="http://www.telegram.org"><img src="telegram.jpg" alt="telegram"></a></li>
+                <li><a href="http://www.instagram.com"><img src="img/instagram.jpeg" alt="instagram"></a></li>
+                <li><a href="http://www.facebook.com"><img src="img/facebook.jpg" alt="facebook"></a></li>
+                <li><a href="http://www.twitter.com"><img src="img/twitter.jpg" alt="twitter"></a></li>
+                <li><a href="http://www.whatsapp.com"><img src="img/whatsapp.jpg" alt="whatsapp"></a></li>
+                <li><a href="http://www.telegram.org"><img src="img/telegram.jpg" alt="telegram"></a></li>
             </ul>
         </ul>
     </div>
