--- a/AMartin.html
+++ b/AMartin.html
@@ -23,7 +23,7 @@
     
         <nav>
         <ul>
-            <li><a href="Proyecto_Seb_Vettel.html"><span class="icon-home"></span>HOME</a></li>
+            <li><a href="index.html"><span class="icon-home"></span>HOME</a></li>
             <li><a href="Abstract.html"><span class="icon-abstract"></span>ABSTRACT</a></li>
             <li class="submenu">
                 <a href="About.html"><span class="icon-about"></span>ABOUT<span class="caret icon-arrow-down6"></span></a>
@@ -204,11 +204,11 @@
 
         <div class="social">
             <ul>
-                <li><a href="http://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
-                <li><a href="http://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
-                <li><a href="http://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
-                <li><a href="http://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
-                <li><a href="http://www.telegram.com"><img src="telegram.jpg" alt="telegram"></a></li>
+                <li><a href="https://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
+                <li><a href="https://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
+                <li><a href="https://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
+                <li><a href="https://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
+                <li><a href="https://www.telegram.com"><img src="telegram.jpg" alt="telegram"></a></li>
             </ul>
         </div>
     </div>
