--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
             </header>
             <nav>	
                 <ul>
-                    <li><a href="Proyecto_Seb_Vettel.html"><span class="icon-home"></span> HOME</a></li>
+                    <li><a href="index.html"><span class="icon-home"></span> HOME</a></li>
                     <li><a href="Abstract.html"><span class="icon-abstract"></span> ABSTRACT</a></li>
                     <li><a href="AMartin.html"><span class="icon-am"></span> ASTON MARTIN</a></li>
                     <li><a href="Contacto.html"><span class="icon-contact"></span> CONTACT</a></li>
@@ -250,11 +250,11 @@
         <div class="social">
             <ul>
                 <ul>
-                    <li><a href="http://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
-                    <li><a href="http://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
-                    <li><a href="http://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
-                    <li><a href="http://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
-                    <li><a href="http://www.telegram.org"><img src="telegram.jpg" alt="telegram"></a></li>
+                    <li><a href="https://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
+                    <li><a href="https://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
+                    <li><a href="https://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
+                    <li><a href="https://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
+                    <li><a href="https://www.telegram.org"><img src="telegram.jpg" alt="telegram"></a></li>
                 </ul>
             </ul>
         </div>
