--- a/Abstract.html
+++ b/Abstract.html
@@ -23,7 +23,7 @@
     
         <nav>
         <ul>
-            <li><a href="Proyecto_Seb_Vettel.html"><span class="icon-home"></span>HOME</a></li>
+            <li><a href="index.html"><span class="icon-home"></span>HOME</a></li>
             <li class="submenu">
                 <a href="About.html"><span class="icon-about"></span>ABOUT<span class="caret icon-arrow-down6"></span></a>
                 <ul class="children">
@@ -118,11 +118,11 @@
     <div class="social">
         <ul>
             <ul>
-                <li><a href="http://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
-                <li><a href="http://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
-                <li><a href="http://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
-                <li><a href="http://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
-                <li><a href="http://www.telegram.org"><img src="telegram.jpg" alt="telegram"></a></li>
+                <li><a href="https://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
+                <li><a href="https://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
+                <li><a href="https://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
+                <li><a href="https://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
+                <li><a href="https://www.telegram.org"><img src="telegram.jpg" alt="telegram"></a></li>
             </ul>
         </ul>
     </div>
