--- a/About.html
+++ b/About.html
@@ -36,11 +36,11 @@
         </div>    
         <div class="social">
             <ul>
-                <li><a href="http://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
-                <li><a href="http://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
-                <li><a href="http://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
-                <li><a href="http://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
-                <li><a href="http://www.telegram.com"><img src="telegram.jpg" alt="telegram"></a></li>
+                <li><a href="https://www.instagram.com"><img src="instagram.jpeg" alt="instagram"></a></li>
+                <li><a href="https://www.facebook.com"><img src="facebook.jpg" alt="facebook"></a></li>
+                <li><a href="https://www.twitter.com"><img src="twitter.jpg" alt="twitter"></a></li>
+                <li><a href="https://www.whatsapp.com"><img src="whatsapp.jpg" alt="whatsapp"></a></li>
+                <li><a href="https://www.telegram.com"><img src="telegram.jpg" alt="telegram"></a></li>
             </ul>
         </div>
         <div class="contenedor">
