--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <div class="social">
         <ul>
             <ul>
-                <li><a href="https://www.instagram.com"><img src="img/instagram.jpeg" alt="instagram"></a></li>
-                <li><a href="https://www.facebook.com"><img src="img/facebook.jpg" alt="facebook"></a></li>
-                <li><a href="https://www.twitter.com"><img src="img/twitter.jpg" alt="twitter"></a></li>
-                <li><a href="https://www.whatsapp.com"><img src="img/whatsapp.jpg" alt="whatsapp"></a></li>
-                <li><a href="https://www.telegram.org"><img src="img/telegram.jpg" alt="telegram"></a></li>
+                <li><a href="http://www.instagram.com"><img src="img/instagram.jpeg" alt="instagram"></a></li>
+                <li><a href="http://www.facebook.com"><img src="img/facebook.jpg" alt="facebook"></a></li>
+                <li><a href="http://www.twitter.com"><img src="img/twitter.jpg" alt="twitter"></a></li>
+                <li><a href="http://www.whatsapp.com"><img src="img/whatsapp.jpg" alt="whatsapp"></a></li>
+                <li><a href="http://www.telegram.org"><img src="img/telegram.jpg" alt="telegram"></a></li>
             </ul>
         </ul>
     </div>
