--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="Home.css">
-    <link rel="icon" href="img/Logo Seb.ico">
+    <link rel="icon" href="Logo Seb.ico">
     <script src="https://code.jquery.com/jquery-latest.js"></script>
 	<script src="NavBar.js"></script>
 </head>
